Better input Remove text white

--- a/Layout/MainLayout.razor
+++ b/Layout/MainLayout.razor
@@ -1,11 +1,11 @@
 ﻿@inherits LayoutComponentBase
 
-<BlazoredToasts />
+<BlazoredToasts Position="Blazored.Toast.Configuration.ToastPosition.BottomRight" Timeout="5" />
 
 <div class="page">
     <main>
         <nav class="navbar navbar-light sticky-top bg-dark-subtle p-2 justify-content-between">
-            <h5 text-white><b>Wordle Cheat</b></h5>
+            <h5><b>Wordle Cheat</b></h5>
 
             <!-- Language and dark/lightmode switch -->
             <div class="d-flex flex-row">
