--- a/Pages/Index.razor
+++ b/Pages/Index.razor
@@ -2,79 +2,101 @@
 
 <PageTitle>Wordle/Ordel Cheat</PageTitle>
 
-<div class="container">
-   <!-- Instructions div with a collapsable instructions list -->
-    <div class="container p-3 my-3 bg-dark-subtle text-white rounded">
-        <button class="btn btn-primary" style="width: 100%" type="button" data-bs-toggle="collapse" data-bs-target="#collapseInstructions" aria-expanded="false" aria-controls="collapseInstructions">
-            Instructions
-        </button>
-        <div class="collapse" id="collapseInstructions">
-            <div style="margin-top: 10px" class="card card-body">
-                <h5>Instructions</h5>
-                <ul>
-                    <li>Make your guess in the real game</li>
-                    <li>Fill in your guess in the input down below</li>
-                    <li>Click on the palette icon and choose the right color for each letter</li>
-                    <li>Press the button, and the website will suggest the next best word to guess!</li>
-                </ul>
+<div autofocus @onkeydown="KeyDown" style="outline: 0" tabindex="0">
+    <div class="container" style="width: 600px">
+        <!-- Instructions div with a collapsable instructions list -->
+        <div class="container p-3 my-3 bg-dark-subtle rounded">
+            <button class="btn btn-primary" style="width: 100%" type="button" data-bs-toggle="collapse" data-bs-target="#collapseInstructions" aria-expanded="false" aria-controls="collapseInstructions">
+                Instructions
+            </button>
+            <div class="collapse" id="collapseInstructions">
+                <div style="margin-top: 10px" class="card card-body">
+                    <h5 class="text">Instructions</h5>
+                    <ul>
+                        <li>Make your guess in the real game (suggested words down below)</li>
+                        <li>Fill in your guess in the input down below</li>
+                        <li>Click in the box, and choose the color you got in the real game</li>
+                        <li>Press enter to update "Suggested words"</li>
+                        <li>Repeat until you win :)</li>
+                    </ul>
+                </div>
             </div>
         </div>
-    </div>
 
-    <!-- The guess area -->
-    <div class="container p-3 my-3 bg-dark-subtle text-white rounded">
-        @for (int i = 0; i < aCurrentGuess+1; i++)
-        {
-            <div style="margin-top: 10px" class="d-flex flex-row justify-content-between">
-                @for (int j = 0; j < 5; j++)
-                {
-                    int index = i * 5 + j;
-                    <div class="text-center">
-                        <input style="background-color: @aColorForLetter[index]; color: black; font-weight: bold; text-align: center" disabled="@(aCurrentGuess > i)" @bind="aLettersGuessed[index]" type="text" class="form-control" />
-                        <i @onclick="x => SetIndex(index)" data-bs-toggle="modal" data-bs-target="#staticBackdropColorPicker" class="bi-palette-fill d-block mt-2" style="cursor: pointer"></i>
-                    </div>
-                }
-            </div>
-        }
-        <div style="margin-top: 10px">
-            <button disabled="@(aIsBusy || aCurrentGuess >= 5)" @onclick="Guess" style="width: 100%" class="btn btn-primary">Execute</button>
+        <!-- The guess area -->
+        <div class="container p-3 my-3 bg-dark-subtle rounded">
+            @for (int i = 0; i < aCurrentGuess + 1; i++)
+            {
+                <div style="margin-top: 10px" class="d-flex flex-row justify-content-between">
+                    @for (int j = 0; j < 5; j++)
+                    {
+                        int index = i * 5 + j;
+                        @if(i == aCurrentGuess)
+                        {
+                            //Current guess, only show text if we have input for that char, shows color picker when press
+                            <div @onclick="x => SetIndex(index)" data-bs-toggle="modal" data-bs-target="#staticBackdropColorPicker" style="background-color: @aColorForLetter[index]; height: 100px; width: 100px; display: flex; align-items: center; justify-content: center;">
+                                @if(aCurrentGuessChars.Count > j)
+                                {
+                                    <p style="color: black; font-size: 72px; text-align: center; cursor: default"><b>@aCurrentGuessChars[j]</b></p>
+                                }
+                            </div>
+                        }
+                        else
+                        {
+                            //Previous guesses, only for show. Cant change color
+                            <div style="background-color: @aColorForLetter[index]; height: 100px; width: 100px; display: flex; align-items: center; justify-content: center;">
+                                <p style="color: black; font-size: 72px; text-align: center; cursor: default"><b>@aLettersGuessed[index]</b></p>
+                            </div>
+                        }
+                    }
+                </div>
+            }
         </div>
-    </div>
 
-    <!-- Shows the suggested words-->
-    <div class="container p-3 my-3 bg-dark-subtle text-white rounded">
-        <h4>Suggested words</h4>
-        <table style="margin-top: 10px" class="table table-hover table-striped">
-            <thead>
-                <tr>
-                    <th>Word</th>
-                    <th>Score</th>
-                </tr>
-            </thead>
-            <tbody>
-                @foreach (var word in aWordListWithScore.OrderByDescending(x => x.Value).Take(20))
-                {
+
+        <!-- Shows the suggested words-->
+        <div class="container p-3 my-3 bg-dark-subtle rounded">
+            <h4><b>Suggested words</b></h4>
+            <table style="margin-top: 10px" class="table table-hover table-striped">
+                <thead>
                     <tr>
-                        <td>@word.Key</td>
-                        <td>@word.Value.ToString("0.00")</td>
+                        <th>Word</th>
+                        <th>Score</th>
                     </tr>
-                }
-            </tbody>
-        </table>
+                </thead>
+                <tbody>
+                    @foreach (var word in aWordListWithScore.OrderByDescending(x => x.Value).Take(20))
+                    {
+                        <tr>
+                            <td>@word.Key</td>
+                            <td>@word.Value.ToString("0.00")</td>
+                        </tr>
+                    }
+                </tbody>
+            </table>
+        </div>
     </div>
 </div>
 
+
 <!-- Modal for showing the color palette -->
-<div class="modal fade" id="staticBackdropColorPicker" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
+<div class="modal fade" id="staticBackdropColorPicker" role="dialog" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
     <div class="modal-dialog">
         <div class="modal-content">
             <div class="modal-body">
-                <div style="height: 150px" class="row p-3">
-                    <div class="col rounded pa-4" style="background-color: darkgray; margin-right: 10px" data-bs-dismiss="modal" @onclick="@(x => ChangeColor(aChosenIndex, "darkgray"))">&nbsp;</div>
-                    <div class="col rounded pa-4" style="background-color: purple; margin-right: 10px" data-bs-dismiss="modal" @onclick="@(x => ChangeColor(aChosenIndex, "purple"))">&nbsp;</div>
-                    <div class="col rounded pa-4" style="background-color: darkgreen" data-bs-dismiss="modal" @onclick="@(x => ChangeColor(aChosenIndex, "darkgreen"))">&nbsp;</div>
+                <div class="d-flex flex-row justify-content-between">
+                    <div class="col rounded-4" style="height: 130px; margin-right: 10px; background-color: darkgray" data-bs-dismiss="modal" @onclick="@(x => ChangeColor(aChosenIndex, "darkgray"))">&nbsp;</div>
+                    <div class="col rounded-4" style="height: 130px; margin-right: 10px; background-color: purple" data-bs-dismiss="modal" @onclick="@(x => ChangeColor(aChosenIndex, "purple"))">&nbsp;</div>
+                    <div class="col rounded-4" style="height: 130px; background-color: darkgreen" data-bs-dismiss="modal" @onclick="@(x => ChangeColor(aChosenIndex, "darkgreen"))">&nbsp;</div>
                 </div>
             </div>
         </div>
     </div>
 </div>
+
+<script>
+    //Function to focus the div
+    function setFocus() {
+        document.querySelector('div[tabindex="0"]').focus();
+    }
+</script>
